@@ -445,6 +445,10 @@
       <sysproperty key="com.sun.management.jmxremote.port" value="38383" />
       <sysproperty key="com.sun.management.jmxremote.authenticate" value="false" />
       <sysproperty key="com.sun.management.jmxremote.ssl" value="false" />
+
+      <assertions>
+	<enable/>
+      </assertions>
     </java>
   </target>
 
